# gst-fastestdet

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md
example/: CMakeLists.txt  compile_commands.json  main.cpp  matrix.pb.cc  matrix.proto  yolo-fastestv2.cpp
example/include/: matrix.pb.h  yolo-fastestv2.h
models/: classes.toml
src/: lib.rs
src/fastestdet/: common.rs  fastest_det.rs  imp.rs  mod.rs  utils.rs  yolo_fastest.rs
src/fastestdetrs/: README.md
