[package]
name = "gst-plugin-tutorial"
version = "0.1.0"
authors = ["Crosstyan <crosstyan@outlook.com"]
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
license = "MIT"
edition = "2021"
description = "Rust Tutorial Plugin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gstfastestdet"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.60"
toml = "0.5.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
gst = { package = "gstreamer", version = "0.18.8", features = ["v1_18"] }
gst-base = { package = "gstreamer-base", version = "0.18" }
gst-video = { package = "gstreamer-video", version = "0.18.7" }
opencv = { version = "0.68.0", default-features = false, features = [
  "imgproc",
] }
once_cell = "1.0"
gst-app = { package = "gstreamer-app", version = "0.18.7" }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.18.7" }
gst-sdp = { package = "gstreamer-sdp", version = "0.18.0", features = [
  "v1_18",
] }
ncnn-rs = { path = "rust-ncnn/ncnn-rs" }
ncnn-bind = { path = "rust-ncnn/ncnn-bind" }
num-traits = "0.2"
log = "0.4"

[build-dependencies]
gst-plugin-version-helper = "0.7.3"
