[package]
name = "gst-plugin-tutorial"
version = "0.1.0"
authors = ["Crosstyan <crosstyan@outlook.com"]
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
license = "MIT"
edition = "2021"
description = "Rust Tutorial Plugin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gstfastestdet"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "fastestdet"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.60"
toml = "0.7.2"
serde = "1.0"
serde_derive = "1.0"
imageproc = "0.23"
image = "0.24"
serde_json = "1.0"
clap = { version = "4.0.27", features = ["derive"] }
gst = { package = "gstreamer", version = "0.20.2", features = ["v1_18"] }
gst-base = { package = "gstreamer-base", version = "0.20.0" }
gst-video = { package = "gstreamer-video", version ="0.20.2" }
once_cell = "1.0"
gst-app = { package = "gstreamer-app", version = "0.20" }
ncnn-rs = { path = "lib/rust-ncnn/ncnn-rs" }
ncnn-bind = { path = "lib/rust-ncnn/ncnn-bind", features=["static"] }
num-traits = "0.2"
log = "0.4"
rusttype = "0.9.3"
protobuf = "3.2.0"
rand = "0.8.5"

[build-dependencies]
gst-plugin-version-helper = "0.7.3"
